# NFC_UID

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-windows.yml
nfc_uid/: __main__.py  nfc_uid.py
windows/: WINDOWS.md  build-windows.bat
